Reland "Convert a Path to a PathSourcePath" 311416c92635813efb248e018178df7a0a9d8e24 and the stacked cdfd9de9ba7e6734d0e2b06facb2f871e5906e43, 39034826e9e2102afddb0e2eb38a77254b4abea3"
Summary: This fixes the previous issue with these three diffs (the previous version changed a getBuckOut() call to getConfiguredBuckOut()).

Reviewed By: ttsugriy

fbshipit-source-id: 5a6c717